web-menu/css/styles.css
body {
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  max-width: 768px;
  margin: auto;
}

.title-wrapper {
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 24px;
  margin-top: -12px;
}

h1 {
  font-weight: 400;
  font-size: 30px;
  text-align: center;
  line-height: 42px;
  color: #fff;
  margin: 0;
  margin-top: 5px;
}

h2 {
  text-transform: uppercase;
  font-weight: 400;
  letter-spacing: 4px;
  font-size: 15px;
  color: #fff;
  margin-top: 2px;
  margin-bottom: -2px;
}

.cover-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  position: relative;
  overflow: hidden;
  height: 200px;
}

.cover-photo {
  width: 120%;
  position: absolute;
  left: -5%;
  top: 0;
  bottom: 0;
  margin: auto;
  z-index: -1;
}

.bottom-gradient {
  width: 100%;
  height: 110px;
  position: absolute;
  left: 0;
  bottom: 0;
  background: linear-gradient(#22181800, #221818);
  z-index: -1;
}

.restaurant-logo-wrapper {
  width: 80px;
  height: 80px;
  overflow: hidden;
  z-index: 10;
  padding: 8px;
  border: 1px solid #fff;
  border-radius: 100%;
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fffb;
}

.restaurant-logo-wrapper img {
  height: 86%;
}

.restaurant-logo-wrapper img.full-width {
  height: auto;
}

::placeholder {
  color: #221818;
}

.search-wrapper {
  background-color: #221818;
  padding: 16px;
  position: relative;
}

.chevron-icon {
  display: inline-block;
  position: relative;
  z-index: 10;
  margin-right: 3px;
  font-size: 12px;
}

.search-icon {
  position: absolute;
  top: 28px;
  left: 28px;
  color: #221818;
  width: 30px;
  height: 30px;
  font-size: 20px;
}

.clear-icon {
  position: absolute;
  top: 16px;
  right: 0;
  padding: 0 24px;
  color: #221818f2;
  width: 30px;
  height: 42px;
  font-size: 25px;
  justify-content: center;
  align-items: center;
  display: none;
  cursor: pointer;
}

.menu.searching .clear-icon {
  display: flex;
}

.search-wrapper input {
  background-clip: padding-box;
  background-color: #fff;
  color: #221818;
  outline: none;
  border: 1px solid white;
  border-radius: 6px;
  padding: 10px 12px;
  font-size: 18px;
  font-family: 'Montserrat', sans-serif;
  width: 100%;
  padding-left: 40px;
  height: 42px;
}

::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #7c6d6d;
  font-weight: 400;
  opacity: 1; /* Firefox */
}

.categories-wrapper {
  padding: 16px;
  overflow: scroll;
  white-space: nowrap;
  top: 0;
  position: sticky;
  z-index: 10;
  background: linear-gradient(#fff, #fff, #fff0);
}

.category-button {
  display: inline-block;
  box-shadow: 0 4px 12px #22181811;
  background: #fff;
  border-radius: 8px;
  padding: 8px 12px;
  margin-right: 8px;
  margin-bottom: 8px;
  border: 1px solid #2218181a;
  color: #221818;
  transition: all 0.2s ease-in-out;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}

.category-button:hover {
  background-color: #f7c524;
  color: #fff;
  font-weight: 400;
}

.category {
  padding: 8px;
}
.category.hidden {
  display: none;
}

.category:nth-child(even) {
  background-color: #77777710;
}

.category-name {
  margin-bottom: 8px;
  margin-left: 13px;
  margin-top: 12px;
}

.category-description {
  margin-left: 13px;
  font-size: 12px;
  margin-bottom: 16px;
  margin-top: -4px;
  color: #22181888;
}

.products-wrapper {
  padding-top: 0;
}

.product {
  display: inline-block;
  position: relative;
  border-radius: 8px;
  padding: 10px 12px;
  margin-bottom: 8px;
  color: #221818;
  transition: all 0.2s ease-in-out;
  border: 1px solid #2218181a;
  width: calc(100% - 24px);
  overflow: hidden;
  background-color: #fff;
  transition: all 0.3s ease-in-out;
}

.product:last-child {
  margin-bottom: 20px;
}

.product .name {
  font-weight: bold;
  font-size: 18px;
  text-shadow: 1px 1px 4px #fff;
}

.product .expanded-info {
  font-size: 14px;
  display: none;
  margin-top: 4px;
  margin-bottom: 6px;
  line-height: 16px;
  color: #221818b5;
}

.product.tapped .expanded-info,
.menu.searching .expanded-info {
  display: block;
}

.product .expanded-photo {
  margin: -16px;
  height: 175px;
  overflow: hidden;
  margin-bottom: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  display: none;
}

.product.tapped .expanded-photo,
.menu.searching .expanded-photo {
  display: flex;
}

.expanded-photo img {
  width: 100%;
}

.product.tapped,
.menu.searching .product {
  box-shadow: 0 0px 12px #22181822;
}

.product.tapped .photo,
.menu.searching .photo {
  display: none;
}

.product.tapped .gradient,
.menu.searching .gradient {
  display: none;
}

.product .weight {
  font-size: 14px;
  margin-top: 4px;
  color: #221818b5;
}

.product .price {
  font-weight: bold;
  margin-top: 24px;
  font-size: 18px;
  display: inline-block;
}

.product .price.obsolete {
  text-decoration: line-through;
  font-weight: 500;
  font-size: 14px;
  margin-top: 16px;
  display: block;
}

.product .discounted-price {
  color: #f44336;
  font-weight: bold;
  font-size: 18px;
  display: inline-block;
}

.product .content {
  position: relative;
  z-index: 2;
}

.product .photo {
  font-weight: bold;
  font-size: 18px;
  float: right;
  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto;
  left: 55%;
  z-index: 0;
  width: 55%;
  min-height: 100%;
}

.product .gradient {
  width: 100%;
  height: 180px;
  position: absolute;
  left: -1%;
  bottom: -41px;
  background: linear-gradient(#fff, #ffff, #ffff, #fff0);
  transform: rotate(-80deg);
  z-index: 1;
}

.product.hidden {
  display: none;
}

highlighted {
  color: #8bc34a;
  font-weight: 600;
}

.language-picker {
  position: absolute;
  top: 0;
  right: 0;
  padding-top: 8px;
  padding-right: 8px;
  padding-left: 30px;
  padding-bottom: 30px;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.language-picker-button {
  border: 1px solid white;
  height: 26px;
  padding: 0 6px;
  border-radius: 8px;
  background-color: #fff;
  box-shadow: 0 4px 12px #0004;
  display: flex;
  align-items: center;
}

.img-wrapper {
  border-radius: 3px;
  overflow: hidden;
  display: flex;
}

.img-wrapper img {
  width: 20px;
}

.language-picker span {
  font-size: 20px;
}

[language='EN'] {
  display: none;
}

.menu.en [language='RO'] {
  display: none;
}

.menu.en span[language='EN'] {
  display: inline;
}

.menu.en div[language='EN'] {
  display: block;
}

.menu.en img[language='EN'] {
  display: inline;
}

.menu.en h2[language='EN'] {
  display: inline;
}

.menu.en input[language='EN'] {
  display: inline-block;
}

.unavailable-banner {
  width: 115px;
  background-color: #ff5722;
  justify-content: center;
  display: flex;
  align-items: center;
  height: 26px;
  color: #fff;
  position: absolute;
  padding-bottom: 3px;
  bottom: 0;
  right: 0;
  z-index: 20;
  border-top-left-radius: 8px;
  box-shadow: 0 0px 8px #302b2b54;
}

.no-products {
  text-align: center;
  margin-top: 15vh;
}

.euro-equivalent {
  display: inline-block;
  font-size: 12px;
  color: #9e9e9e;
  font-weight: 500;
}

